philly-311-citywide-meta/src/objects/Required_Streets_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the fields name which we have to pass to Streets during new Case Creation.</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if it is required in CityWorks Interface</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Required Streets Field</label>
</CustomObject>